# foodics-task

./: .gitignore  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.debug.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
app/: errors.py  main.py  settings.py
app/actions/: __init__.py  ingredient.py  order.py  order_item.py  product.py  product_ingredient.py
app/models/: db.py
app/models/pydantic/: __init__.py  order.py
app/routes/: order.py
app/scripts/: seed_db.py
app/tests/: conftest.py
app/tests/actions/: test_ingredient.py  test_order.py  test_order_item.py  test_product.py
app/tests/routes/: test_order.py
app/utils/: send_email.py
