[tool.poetry]
name = "foodics-task"
version = "0.1.0"
description = ""
authors = ["Abdelrahmen Elbakary <abdelrahmenayman7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.2"}
pydantic-settings = "^2.6.0"
sqlmodel = "^0.0.22"
alembic = "^1.13.3"
psycopg2-binary = "^2.9.10"
fastapi-mail = "^1.4.1"
sendgrid = "^6.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
mypy = "^1.12.0"
autopep8 = "^2.3.1"
isort = "^5.13.2"
flake8 = "^7.1.1"
pytest-asyncio = "^0.24.0"
debugpy = "^1.8.7"
httpx = "^0.27.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
